tests/errors/vis_private/vis_private.c
#error vis_private:6:18 The name 'privateFun' here should denote to some value; but not found.
